<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".AboutActivity"
    tools:openDrawer="right">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:background="@color/colordark"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collaps"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorwhite"
                android:contentDescription="@string/Home"
                android:fitsSystemWindows="true"
                android:textAlignment="viewStart"
                app:contentScrim="?attr/colorAccent"
                app:expandedTitleMargin="5dp"
                app:expandedTitleTextAppearance="@color/colorwhite"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:background="@color/colordark"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/about_us3"

                    android:contentDescription="@string/todo" />
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarr"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:title="@string/app_name"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchorGravity="center"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/testa"
                />
<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:layout_marginLeft="20dp"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:id="@+id/recyclerviewa"/>-->

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:itemTextColor="#fff"
        app:menu="@menu/menu_item" />
</androidx.drawerlayout.widget.DrawerLayout>