<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ro"
    android:orientation="vertical"
    tools:context=".CreateEvent">

    <androidx.drawerlayout.widget.DrawerLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ro"
        android:orientation="vertical"
        tools:context=".CreateEvent"
        tools:openDrawer="right">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ro">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/ro"
                android:fitsSystemWindows="true"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Home"
                    android:fitsSystemWindows="true"
                    android:textAlignment="viewStart"
                    app:contentScrim="?attr/colorAccent"
                    app:expandedTitleMargin="5dp"
                    app:expandedTitleTextAppearance="@color/colorwhite"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:backgroundTint="@color/colorwhite"
                        android:contentDescription="Home"
                        android:fadeScrollbars="true"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        android:screenReaderFocusable="true"
                        android:src="@drawable/eve"
                        android:textAlignment="textStart"
                        app:layout_collapseMode="parallax" />


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbarr"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:title="@string/app_name"
                        app:layout_collapseMode="pin"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="150dp"
                        android:text="Add Event"
                        android:textColor="@color/colorwhite"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="220dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/backsign">

                <TextView
                    android:id="@+id/ee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="Add New Event With \nSome Details"
                    android:textColor="@color/colordark"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/qq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ee"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:id="@+id/eventname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:drawableStart="@drawable/ic_border_color_black_24dp"
                        android:hint="@string/Eventname"
                        android:textStyle="italic" />
                </LinearLayout>

                <!--            <LinearLayout-->
                <!--                android:id="@+id/www"-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_below="@+id/qq"-->
                <!--                android:layout_marginTop="5dp"-->
                <!--                android:layout_marginBottom="10dp"-->
                <!--                android:background="@drawable/backoffername">-->

                <!--                <ImageView-->
                <!--                    android:layout_width="wrap_content"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginLeft="20dp"-->
                <!--                    android:layout_marginTop="14dp"-->
                <!--                    android:src="@drawable/ic_file_upload" />-->

                <!--                <Button-->
                <!--                    android:id="@+id/imagelocatione"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginRight="20dp"-->
                <!--                    android:hint="Event image"-->
                <!--                    android:textStyle="italic" />-->
                <!--            </LinearLayout>-->

                <LinearLayout
                    android:id="@+id/mmm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/qq"
                    android:layout_marginBottom="10dp">


                    <EditText
                        android:id="@+id/eventdate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:drawableStart="@drawable/ic_datee"
                        android:hint="@string/Eventdate"
                        android:textStyle="italic" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    android:id="@+id/im"
                    android:background="@drawable/backim"
                    android:layout_below="@+id/mmm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Event image"
                        android:drawableStart="@drawable/ic_file_upload"
                        />

                </LinearLayout>

                <EditText
                    android:id="@+id/descrte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/im"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:hint="Enter short description"
                    android:textStyle="italic" />

                <ImageButton
                    android:id="@+id/Eventdone"
                    android:layout_width="140dp"
                    android:layout_height="45dp"
                    android:layout_below="@+id/descrte"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backblack"
                    android:src="@drawable/ic_arrowr" />
            </RelativeLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/header"
            app:itemTextColor="#fff"
            app:menu="@menu/menu_item" />

    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>