<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    app:chainUseRtl="true"
    tools:context=".Main"
    tools:openDrawer="right">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorwhite">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorwhite"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collaps"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/Home"
                android:fitsSystemWindows="true"
                android:textAlignment="viewStart"
                app:contentScrim="?attr/colorAccent"
                app:expandedTitleMargin="5dp"
                app:expandedTitleTextAppearance="@color/colorwhite"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <ImageView
                    android:id="@+id/offer"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:backgroundTint="@color/colorwhite"
                    android:contentDescription="Home"
                    android:fadeScrollbars="true"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:screenReaderFocusable="true"
                    android:src="@drawable/of"
                    android:textAlignment="textStart"
                    app:layout_collapseMode="parallax" />
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarr"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:title="@string/app_name"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/fir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:paddingBottom="5dp">

                    <RelativeLayout
                        android:layout_weight="1"
                        android:id="@+id/menuu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/im"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/meneee" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/im"
                            android:gravity="center"
                            android:text="@string/Menu"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/event"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/menuu"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/ime"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/evv" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ime"
                            android:gravity="center"
                            android:text="@string/Event"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/sacc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fir"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp">

                    <RelativeLayout
                        android:id="@+id/table"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/t"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/table_home" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/t"
                            android:gravity="center"
                            android:text="Tables"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/royal"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/table"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/royalll"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/royalll"
                            android:gravity="center"
                            android:text="About"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/thee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sacc"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp">

                    <RelativeLayout
                        android:id="@+id/face"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/imf"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/facebook" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imf"
                            android:gravity="center"
                            android:text="Facebook"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/insta"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/face"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/iminsta"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/instegram" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/iminsta"
                            android:gravity="center"
                            android:text="Inesta"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/thee"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="20dp">

                    <RelativeLayout
                        android:id="@+id/rate"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/imrate"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/file" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imrate"
                            android:gravity="center"
                            android:text="Rate Us"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/desidend"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/rate"
                        android:background="@drawable/backsign"
                        android:elevation="3dp"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2">

                        <ImageView
                            android:id="@+id/imedd"
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:src="@drawable/menu_1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imedd"
                            android:gravity="center"
                            android:text="Desinde By"
                            android:textColor="@color/colordark"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu_item" />

</androidx.drawerlayout.widget.DrawerLayout>

    <!--    app:headerLayout="@layout/header"-->